--- a/resources/Content.less
+++ b/resources/Content.less
@@ -517,6 +517,7 @@ html.nightingale-dark-mode {
     .mw-highlight .n,
     .mw-highlight .na,
     .mw-highlight .nb,
+    .mw-highlight .nn,
     .mw-highlight .nv { color: @color-editor-text !important; }
     
     .mw-highlight .nc { color: #4ec9b0 !important; } /* Teal for Class Names */
