--- a/resources/Content.less
+++ b/resources/Content.less
@@ -531,6 +531,12 @@ html.nightingale-dark-mode {
     .mw-content-ltr.content .mw-highlight-lines pre {
         box-shadow: inset 2.75em 0 0 @background-color-gutter !important;
     }
+
+   /* RC Filters Dropdown Header */
+    .mw-rcfilters-ui-filterMenuHeaderWidget-header {
+        background-color: @background-color-ui-subtle !important;
+        border-bottom: 1px solid @border-color-ui-widget !important;
+    }
     
     /* --- E. Image Dimming (Scanned Pages) --- */
     .otright img {
