--- a/resources/Content.less
+++ b/resources/Content.less
@@ -537,6 +537,12 @@ html.nightingale-dark-mode {
         background-color: @background-color-ui-subtle !important;
         border-bottom: 1px solid @border-color-ui-widget !important;
     }
+
+   /* RC Filters Section Headers (The gray dividers) */
+    .mw-rcfilters-ui-filterMenuSectionOptionWidget {
+        background-color: @background-color-editor-bar !important; 
+        color: @color-base !important;
+    }
     
     /* --- E. Image Dimming (Scanned Pages) --- */
     .otright img {
