--- a/resources/Content.less
+++ b/resources/Content.less
@@ -529,7 +529,7 @@ html.nightingale-dark-mode {
     /* Box-shadow gutter in view mode */
     .mw-content-ltr.mw-highlight-lines pre,
     .mw-content-ltr.content .mw-highlight-lines pre {
-        box-shadow: inset 2.75em 0 0 @background-color-gutter !important;
+        box-shadow: unset !important;
     }
 
    /* RC Filters Dropdown Header */
