--- a/resources/Content.less
+++ b/resources/Content.less
@@ -59,9 +59,12 @@ div.thumbinner {
     color: @color-thumb;
 
     .toctogglelabel,
-    .tocnumber,
-    a {
+    .tocnumber {
         color: @color-thumb;
+    }
+    
+    a {
+        color: @color-link;
     }
 }
 
