--- a/resources/mediawiki.skin.variables.less
+++ b/resources/mediawiki.skin.variables.less
@@ -6,7 +6,7 @@
     --background-color-warning: #fdfcfb;
     --background-color-base: #f7f7f7;
     --background-color-article: #fbfdfd;
-    --background-color-thumb: #fdfcfb;
+    --background-color-thumb: #f8f9fa;
     --background-color-card: #ffffff;
     --background-color-hover: #f5f5f5;
     --background-color-interactive: #eaecf0;
@@ -17,7 +17,7 @@
     --color-text-main: #202122;
     --color-thumb: #170b06;
     --color-base: #303030;
-    --color-gray: #522173;
+    --color-gray: #aaaaaa;
     --color-gray-2: #ced4da;
     
     /* Links */
