--- a/resources/Content.less
+++ b/resources/Content.less
@@ -224,11 +224,11 @@ div.thumbinner {
     transition: border-color 0.2s, box-shadow 0.2s;
 }
 
-/* Fix Buttons and Legend */
+/* Fix Buttons and Legend
 .oo-ui-buttonElement-framed > .oo-ui-buttonElement-button {
     background-color: @background-color-ui-widget !important;
     color: @color-base !important;
-}
+} This is used on Special:Search, elsewhere? if it's needed we need to fix those buttons*/
 .mw-changeslist-legend {
     background-color: @background-color-base !important;
     color: @color-base !important;
