--- a/resources/Content.less
+++ b/resources/Content.less
@@ -546,6 +546,13 @@ html.nightingale-dark-mode {
         background-color: @background-color-editor-bar !important; 
         color: @color-base !important;
     }
+
+   /* Replace Text Extension Options Box */
+    .ext-replacetext-searchoptions {
+        background-color: @background-color-ui-subtle !important;
+        border-color: @border-color-ui-widget !important;
+        color: @color-base !important;
+    }
     
     /* --- E. Image Dimming (Scanned Pages) --- */
     .otright img {
