--- a/resources/Content.less
+++ b/resources/Content.less
@@ -553,6 +553,12 @@ html.nightingale-dark-mode {
         border-color: @border-color-ui-widget !important;
         color: @color-base !important;
     }
+
+   /* AdvancedSearch Field Container */
+    .mw-advancedSearch-fieldContainer {
+        background: @background-color-ui-subtle !important;
+        border-color: @border-color-ui-widget !important;
+    }
     
     /* --- E. Image Dimming (Scanned Pages) --- */
     .otright img {
