--- a/resources/Content.less
+++ b/resources/Content.less
@@ -559,6 +559,17 @@ html.nightingale-dark-mode {
         background: @background-color-ui-subtle !important;
         border-color: @border-color-ui-widget !important;
     }
+   /* AdvancedSearch Label */
+    .mw-advancedSearch-fieldContainer .oo-ui-labelElement > .oo-ui-fieldsetLayout-header > .oo-ui-labelElement-label {
+        background: @background-color-ui-subtle !important;
+        color: @color-base !important;
+    }
+
+    /* AdvancedSearch Expandable Pane Hover */
+    .mw-advancedSearch-expandablePane-button.oo-ui-widget-enabled.oo-ui-buttonWidget > .oo-ui-buttonElement-button:hover {
+        background-color: @background-color-editor-bar !important;
+        color: @color-base !important;
+    }
     
     /* --- E. Image Dimming (Scanned Pages) --- */
     .otright img {
