--- a/resources/Content.less
+++ b/resources/Content.less
@@ -547,6 +547,12 @@ html.nightingale-dark-mode {
         color: @color-base !important;
     }
 
+   /* RC Filters Selected Item */
+   .mw-rcfilters-ui-itemMenuOptionWidget.oo-ui-optionWidget-selected {
+        background-color: @background-color-progressive-subtle !important;
+        color: @color-base !important;
+    }
+
    /* Replace Text Extension Options Box */
     .ext-replacetext-searchoptions {
         background-color: @background-color-ui-subtle !important;
