--- a/resources/Content.less
+++ b/resources/Content.less
@@ -584,6 +584,12 @@ html.nightingale-dark-mode {
         background-color: @background-color-thumb !important;
         color: @color-thumb !important;
     }
+
+   /* File Page Table of Contents */
+    #filetoc {
+        background-color: @background-color-ui-subtle !important;
+        border-color: @border-color-ui-widget !important;
+    }
     
     /* --- E. Image Dimming (Scanned Pages) --- */
     .otright img {
