--- a/resources/Content.less
+++ b/resources/Content.less
@@ -326,6 +326,20 @@ pre, code, .mw-code {
     outline: 1px dashed @border-color-ui-widget;
 }
 
+/* Skin standard MediaWiki datatables */
+table.mw-datatable {
+    background-color: var(--background-color-base);
+}
+table.mw-datatable th {
+    background-color: var(--background-color-interactive-subtle);
+}
+table.mw-datatable td {
+    background-color: var(--background-color-card);
+}
+table.mw-datatable tr:hover td {
+    background-color: var(--background-color-hover);
+}
+
 /* ==========================================================================
    3. MEDIA QUERIES (RESPONSIVE)
    ========================================================================== */
