--- a/resources/Content.less
+++ b/resources/Content.less
@@ -308,6 +308,10 @@ pre, code, .mw-code {
 }
 
 /* Codex Messages (Warnings) */
+.cdx-message--error {
+    background-color: @background-color-error-subtle !important;
+    border-color: @border-color-error !important;
+}
 .cdx-message--warning {
     background-color: @background-color-warning-subtle !important;
     border-color: @border-color-warning !important;
