--- a/resources/Notifications.less
+++ b/resources/Notifications.less
@@ -67,3 +67,10 @@
 #pt-talk-alert {
     display: none;
 }
+
+/* MediaWiki toast notifications */
+.mw-notification {
+    border: 1px solid var(--border-color-base);
+    background-color: var(--background-color-ui-widget);
+    color: var(--color-text-main);
+}
