--- a/resources/Content.less
+++ b/resources/Content.less
@@ -670,6 +670,11 @@ html.nightingale-dark-mode {
         border: 1px solid @border-color-ui-widget !important;
         border-radius: 2px;
     }
+
+   /* Revision Slider */
+    .mw-revslider-container {
+        border-color: @border-color-ui-widget !important;
+    }
     
     /* --- E. Image Dimming (Scanned Pages) --- */
     .otright img,
